[tool.poetry]
name = "bytetrack"
version = "0.1.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.4"
torch = "^1.10.0"
opencv-python = "^4.5.4"
loguru = "^0.5.3"
scikit-image = "^0.18.3"
tqdm = "^4.62.3"
torchvision = "^0.11.1"
Pillow = "^8.4.0"
thop = "^0.0.31"
ninja = "^1.10.2"
tabulate = "^0.8.9"
tensorboard = "^2.7.0"
lap = "^0.4.0"
motmetrics = "^1.2.0"
filterpy = "^1.4.5"
h5py = "^3.6.0"
onnx = "1.8.1"
onnxruntime = "1.8.0"
onnx-simplifier = "0.3.5"
Cython = "^0.29.24"
cython-bbox = "^0.1.3"
pycocotools = "^2.0.3"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
